--- a/welcome.html
+++ b/welcome.html
@@ -6,5 +6,6 @@
     <h1>Let's Learn About Git and Github!</h1>
     <p>Somebody should probably change this so it is more descriptive.</p>
     <p>It would be cool if there were some images, too!</p>
+    <h2>Here's a new thing</h2>
   </body>
 </html>
