--- a/alpaca.html
+++ b/alpaca.html
@@ -1,5 +1,5 @@
 <html>
-<head>Alpacas, alpacas, alpacas ... and sltohs</head>
+<head>Alpacas, alpacas, alpacas ... and sloths</head>
 <body>
 <p>Like all of my webpages, this will have something to do with alpacas and sloths or maybe also llamas.</p>
 <p>Messing with Liz's File</p>
